3.3.0 b568
* added LM spawn egg support (#197)
* converting spawners with LM spawn eggs not implemented yet
* overhauled the code which shows messages from messages.yml.  This was a lot of back-end code work and extensive tested will be needed
* messages.yml has been incremented to version 7.  Two new sections have been added and various messages added